erDiagram
    User {
        CharField password
        DateTimeField last_login
        BooleanField is_superuser
        UUIDField id
        CharField phone_number
        CharField first_name
        CharField last_name
        CharField role
        BooleanField is_active
        BooleanField is_verified
        BooleanField is_staff
        DateTimeField date_joined
        ManyToManyField groups
        ManyToManyField user_permissions
    }

    Location {
        UUIDField id
        CharField location_type
        CharField address_line
        CharField area
        CharField district
        CharField division
        CharField name
        CharField branch
        SlugField slug
        CharField phone
        CharField email
        FileField logo
        FileField image
        TextField description
        CharField tagline
        CharField badge
        FloatField rating
        IntegerField reviews_count
        CharField open_timing
        BooleanField is_verified
        BooleanField is_active
        DateTimeField created_at
        DateTimeField updated_at
    }

    FacilityMembership {
        UUIDField id
        ForeignKey user
        ForeignKey location
        CharField role
        DateTimeField created_at
    }

    HospitalCategory {
        UUIDField id
        CharField name
        SlugField slug
        CharField icon
        TextField description
        IntegerField count
    }

    HospitalService {
        UUIDField id
        CharField name
        CharField icon
        TextField description
    }

    Hospital {
        OneToOneField location
        ForeignKey category
        BooleanField has_diagnostic_center
        ManyToManyField services
    }

    DiagnosticCenterCategory {
        UUIDField id
        CharField name
        SlugField slug
        ForeignKey parent
        CharField icon
        TextField description
    }

    DiagnosticService {
        UUIDField id
        CharField name
        CharField icon
        TextField description
    }

    DiagnosticCenter {
        OneToOneField location
        ForeignKey category
        ManyToManyField services
    }

    Chamber {
        OneToOneField location
        ForeignKey doctor
        CharField assistant_phone
    }

    DoctorSpecialty {
        UUIDField id
        CharField name
        SlugField slug
        CharField icon
        TextField description
    }

    Doctor {
        UUIDField id
        OneToOneField user
        CharField bmdc_number
        CharField name
        SlugField slug
        TextField qualification
        CharField experience
        TextField description
        BooleanField is_verified
        ManyToManyField specialties
    }

    DoctorAffiliation {
        UUIDField id
        ForeignKey doctor
        ForeignKey location
        DecimalField fee
    }

    AffiliationSchedule {
        UUIDField id
        ForeignKey affiliation
        CharField day_of_week
        TimeField start_time
        TimeField end_time
    }

    TestCategory {
        UUIDField id
        CharField name
        SlugField slug
        CharField icon
        TextField description
        BooleanField is_active
        PositiveIntegerField order
    }

    Test {
        UUIDField id
        ForeignKey category
        CharField name
        SlugField slug
        CharField code
        TextField description
        CharField sample_type
        TextField preparation_instructions
        BooleanField fasting_required
        PositiveIntegerField report_time_hours
        BooleanField is_active
    }

    FacilityTest {
        UUIDField id
        ForeignKey location
        ForeignKey test
        DecimalField price
        DecimalField discounted_price
        DecimalField original_price
        CharField discount
        CharField report_time
        BooleanField is_available
        BooleanField home_sample_collection
        DateTimeField updated_at
    }

    DoctorBooking {
        UUIDField id
        ForeignKey user
        CharField status
        TextField notes
        DateTimeField created_at
        DateTimeField updated_at
        ForeignKey affiliation
        DateField date
        CharField slot
        CharField patient_name
        CharField patient_phone
    }

    LabBooking {
        UUIDField id
        ForeignKey user
        CharField status
        TextField notes
        DateTimeField created_at
        DateTimeField updated_at
        ForeignKey facility_test
        DateField pickup_date
        CharField patient_name
        CharField patient_phone
        CharField pickup_address_line
        CharField pickup_area
        CharField pickup_city
        CharField pickup_district
    }

    Doctor }o--o{ DoctorSpecialty : specialties
    User ||--o{ DoctorBooking : user
    Location ||--o{ DoctorAffiliation : location
    DoctorAffiliation ||--o{ AffiliationSchedule : affiliation
    DoctorAffiliation ||--o{ DoctorBooking : affiliation
    User }o--o{ Group : groups
    TestCategory ||--o{ Test : category
    Location ||--|| Hospital : location
    Hospital }o--o{ HospitalService : services
    Doctor ||--o{ DoctorAffiliation : doctor
    Doctor ||--o{ Chamber : doctor
    Location ||--|| Chamber : location
    User }o--o{ Permission : user_permissions
    Location ||--o{ FacilityMembership : location
    Test ||--o{ FacilityTest : test
    User ||--o{ LabBooking : user
    User ||--o{ FacilityMembership : user
    HospitalCategory ||--o{ Hospital : category
    DiagnosticCenterCategory ||--o{ DiagnosticCenterCategory : parent
    Location ||--o{ FacilityTest : location
    DiagnosticCenter }o--o{ DiagnosticService : services
    FacilityTest ||--o{ LabBooking : facility_test
    User ||--|| Doctor : user
    DiagnosticCenterCategory ||--o{ DiagnosticCenter : category
    Location ||--|| DiagnosticCenter : location